--- a/llm/requirements.txt
+++ b/llm/requirements.txt
@@ -2,7 +2,7 @@ fastapi>=0.109.0
 uvicorn[standard]>=0.27.0
 python-multipart>=0.0.6
 pydantic>=2.5.0
-scikit-learn>=1.3.0
+scikit-learn==1.3.2
 pandas>=2.1.0
 numpy>=1.26.0
 networkx>=3.2.0
